--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <!-- Products Section -->
   <section id="products">
-    <h1>📦 Product Inventory Manager</h1>
+    <h1> Product Inventory Manager</h1>
 
     <form id="addProductForm">
       <input type="text" id="productName" placeholder="Product Name" required />
